# CardioQuant3D

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cardioquant3d/: __init__.py
cardioquant3d/api/: main.py
cardioquant3d/data/: __init__.py  dataset.py  preprocessing.py  transforms.py
cardioquant3d/evaluation/: __init__.py  clinical_metrics.py  metrics.py
cardioquant3d/geometry/: __init__.py  measurements.py  mesh.py
cardioquant3d/inference/: __init__.py  predictor.py
cardioquant3d/models/: __init__.py  unet3d.py
cardioquant3d/training/: __init__.py  losses.py  trainer.py
cardioquant3d/utils/: __init__.py  io.py  logging.py  seed.py
configs/: config.yaml
configs/inference/: inference.yaml
configs/model/: model.yaml
configs/training/: training.yaml
scripts/: evaluate.py  infer.py  train.py
tests/: __init__.py  test_api.py  test_clinical_metrics.py  test_data.py  test_geometry.py  test_losses.py  test_metrics.py  test_model.py  test_preprocessing.py  test_seed.py
